--- a/build.gradle
+++ b/build.gradle
@@ -167,10 +167,12 @@ dependencies {
 
     modImplementation "curse.maven:ftb-library-404465:6807424"
     modImplementation "curse.maven:ftb-essentials-410811:6555287"
+
+    modImplementation "curse.maven:sophisticated-core-618298:6965342"
+    modImplementation "curse.maven:sophisticated-storage-619320:6960639"
+
 }
 
-// Uncomment the lines below if you wish to configure mixin. The mixin file should be named modid.mixins.json.
-/*
 mixin {
     add sourceSets.main, "${mod_id}.refmap.json"
     config "${mod_id}.mixins.json"
@@ -178,6 +180,9 @@ mixin {
 
 dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0"))
 }
 
 jar {
@@ -185,7 +190,6 @@ jar {
             "MixinConfigs": "${mod_id}.mixins.json"
     ])
 }
-*/
 
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
